--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8081
+server.port = 8083
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.application.name=LogiMove
@@ -14,11 +14,14 @@ spring.datasource.url=jdbc:mariadb://mariadb.cdfxzqfeov0l.ap-northeast-2.rds.ama
 #spring.datasource.username=admin
 #spring.datasource.password=00000000
 
+logging.level.com.zaxxer.hikari = TRACE
+
 spring.datasource.hikari.username= admin
 spring.datasource.hikari.password= 00000000
-spring.datasource.hikari.maximumPoolSize = 20
-#spring.datasource.hikari.connection-timeout= 30000
-#spring.datasource.hikari.maxLifetime  = 1800000
+spring.datasource.hikari.maximumPoolSize = 10
+spring.datasource.hikari.connection-timeout= 3000
+spring.datasource.hikari.maxLifetime  = 58000
+spring.datasource.hikari.leak-detection-threshold=10000
 spring.datasource.hikari.poolName  = MyHikariCP
 spring.datasource.hikari.readOnly  = false
 spring.datasource.hikari.connection-test-query=SELECT 1
