--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ mybatis.type-aliases-package=Pack.vo
 mybatis.mapper-locations=mybatis/**/*.xml
 
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://mariadb.cdfxzqfeov0l.ap-northeast-2.rds.amazonaws.com:3306/pscict_final?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://mariadb.cdfxzqfeov0l.ap-northeast-2.rds.amazonaws.com:3306/pscict_final?characterEncoding=UTF-8&serverTimezone=UTC&allowMultiQueries=true
 #spring.datasource.username=admin
 #spring.datasource.password=00000000
 
@@ -28,3 +28,7 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 #spring.datasource.hikari.connectionTestQuery = 30000
 #spring.datasource.hikari.jdbc-url= jdbc:mariadb://mariadb.cdfxzqfeov0l.ap-northeast-2.rds.amazonaws.com:3306/pscict_final?characterEncoding=UTF-8&serverTimezone=UTC
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
