--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 server.port = 8083
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-spring.application.name=LogiMove
+spring.application.name=move
 
 # mybatis 매핑을 짧게 쓰기위한 설정
 # result type을 지정할때 package를 생량 가능 pack.mapper.vo -> vo
 mybatis.type-aliases-package=Pack.vo 
 # mapper.xml 위치 지정
 mybatis.mapper-locations=mybatis/**/*.xml
+
+eureka.instance.prefer-ip-address= true
+eureka.client.service-url.defaultZone= http://3.115.120.48:8080/eureka/eureka
 
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://mariadb.cdfxzqfeov0l.ap-northeast-2.rds.amazonaws.com:3306/pscict_final?characterEncoding=UTF-8&serverTimezone=UTC&allowMultiQueries=true
