--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,16 @@
 		   <groupId>org.springframework.boot</groupId>
 		   <artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		    <version>2.2.10.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<finalName>move</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
